infra/k8s-digitalocean/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-ticketing-srv
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    # - host: ticketing.dev
    - host: www.david-wu.xyz
      http:
        paths:
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-srv
              servicePort: 3022
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-srv
              servicePort: 3020
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-srv
              servicePort: 3019
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3018
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.david-wu.xyz'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
